feat: add yax export configuration

--- a/yax.yml
+++ b/yax.yml
@@ -1,7 +1,4 @@
 build:
   agentsmd:
     from:
-      - file:_agents.md
-    output: _agents.md
-    metadata:
-      name: MCP for terminal session scripts
+      - file:docs/agents.md
