--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,9 @@ license = {text = "MIT"}
 readme = "README.md"
 requires-python = "^3.12"
 dependencies = [
-    "typer (>=0.19.2,<0.20.0)"
+    "typer (>=0.19.2,<0.20.0)",
+    "mcp (>=1.17.0,<2.0.0)",
+    "anyio (>=4.6.2,<5.0.0)"
 ]
 
 [project.scripts]
@@ -22,5 +24,6 @@ build-backend = "poetry.core.masonry.api"
 
 [dependency-groups]
 dev = [
-    "check-depz >=0.18.0"
+    "check-depz >=0.18.0",
+    "pytest (>=8.3.0,<9.0.0)"
 ]
